[package]
name = "nokto-theme"
edition = "2024"
authors = ["o24s <fulmlumo@gmail.com>"]
license = "Apache-2.0"
build = "build.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
csscolorparser = "0.8.3"
anyhow = "1.0.102"
indexmap = { version = "2.13.1", features = ["serde"] }
palette = "0.7.6"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"